# python-playground

./: 5_years_SPY.ipynb  PYTC1M2P01_Activity_Workingwithalist.ipynb  PYTC1M4P01.ipynb  PYTC1M4P02_Activity - Finding what you need.ipynb  PYTC1M5P01_Activity- Debugging code.ipynb  README.md  buiit_in_functions.py  buiit_in_functions2.py  classes_task.py  debugging_a_faulty_calculation.py  dictionaries.py  famous_quote.py  famous_quote_2.py  file_extension.py  functions.py  handling_key_error.py  hello_world.py  iUvA1fcMRTSFX4zYOIgPsQ_5748982054a244b29fe7da3df1afa0e1_PYTC1M3P03_Activity_Classandfunctions.ipynb  insect_collection.csv  make_a_sandwich.py  making_a_list.py  math_utils.py  menus.py  name.py  name_cases.py  personal_message.py  playground.ipynb  pyproject.toml  simple_message.py  simple_messages.py  stripping_names.py  test.py
