[project]
name = "python-playground"
version = "0.1.0"
description = ""
authors = [{ name = "rainspistols", email = "galchenko.maksym@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "pandas-datareader (>=0.10.0,<0.11.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "datetime (>=5.5,<6.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "pytest (>=8.4.2,<9.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
